{
    "name": "CharacterControls",
    "maps": [
        {
            "name": "Character",
            "id": "4d2842bd-2e45-4a21-9956-c6e24b1e39f7",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "9779f391-e285-475f-ab37-b8949a88daf1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "ba0cbaef-73d7-4872-93e0-a0981770ebe6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hook",
                    "type": "Button",
                    "id": "271a752f-953f-4c39-a812-402c1882e93a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c62f3138-6295-449e-a546-b8f609c7238f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.3,pressPoint=0.3)",
                    "processors": "",
                    "groups": "PC",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bcaa4a4b-6062-43d8-ae03-ec6582b000b3",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Hold(duration=0.3,pressPoint=0.3)",
                    "processors": "",
                    "groups": "Touch",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02146a48-bc1e-4419-87a1-706e7d051b50",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5094128-9bd9-469a-b3eb-437d462a6cd9",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b804202-8a9b-478c-8e39-664d96754356",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Hook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "768ebb1e-7b14-4475-8d13-84327b6bb1c3",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Hook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": []
        },
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}